[tool.poetry]
name = "osc"
version = "0.1.0"
description = ""
authors = ["FusionSid <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.17.6"
asyncpg = "^0.25.0"
fastapi = "^0.75.0"
python-dotenv = "^0.19.2"
slowapi = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
